--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -218,7 +218,7 @@ def get_and_add_components(graph, _command, names)
       end
       if s.empty?
         LOGGER.warn("No source found in #{ARGV}")
-        raise NotImplementedError
+        raise ArgumentError
       end
       s
     when 'sink.ctf.fs'
