--- a/ze/Makefile.am
+++ b/ze/Makefile.am
@@ -334,10 +334,10 @@ BTX_ZE_GENERATED_SOURCE_TEST = \
 $(BTX_ZE_GENERATED_SOURCE_TEST) &: btx_ze_model.yaml
 	$(METABABEL) -d btx_ze_model.yaml -t SOURCE  -o btx_source_ze_test -p zetest -c test  -i ze.h.include
 
-noinst_LTLIBRARIES += libcrtnn.la
-libcrtnn_la_SOURCES = $(BTX_ZE_GENERATED_SOURCE_TEST)
-libcrtnn_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./btx_source_ze_test/
-libcrtnn_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
+noinst_LTLIBRARIES += libtestzesource.la
+libtestzesource_la_SOURCES = $(BTX_ZE_GENERATED_SOURCE_TEST)
+libtestzesource_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(top_srcdir)/utils/include -I$(srcdir)/include -I./btx_source_ze_test/
+libtestzesource_la_CFLAGS = -fPIC -Wall -Wextra -Wno-unused-parameter $(WERROR) $(BABELTRACE2_CFLAGS)
 
 TRACE_OUT = $(TRACE_COMMON:.thapi_text_pretty=.bt_text_pretty)
 
@@ -351,7 +351,7 @@ TESTS = \
 TEST_EXTENSIONS = .dust .thapi_text_pretty
 DUST_LOG_COMPILER = ./test_wrapper.sh
 THAPI_TEXT_PRETTY_LOG_COMPILER = $(top_builddir)/utils/test_wrapper_thapi_text_pretty.sh
-AM_THAPI_TEXT_PRETTY_LOG_FLAGS = ze ./btx_source_ze_test/ .libs/libcrtnn.a
+AM_THAPI_TEXT_PRETTY_LOG_FLAGS = ze ./btx_source_ze_test/ .libs/libtestzesource.a
 
 check_DATA = \
 	test_wrapper.sh \
