--- a/utils/test_wrapper_thapi_text_pretty.sh.in
+++ b/utils/test_wrapper_thapi_text_pretty.sh.in
@@ -20,8 +20,8 @@ source_callback_c="${folder_name}/callback.c"
   -i "${input_thapi_text_pretty}" -o "${source_callback_c}"
 
 ${CC} -o "${folder_name}/libTestSource.so" \
-  -I @top_srcdir@/utils/include -I@top_srcdir@/"${be}"/include \
-  -I @top_srcdir@/"${be}"/ -I "${source_path}" \
+  -I @top_srcdir@/utils/include -I @top_srcdir@/"${be}" -I @top_srcdir@/"${be}"/include \
+  -I . -I "${source_path}" \
   $(pkg-config --cflags babeltrace2) -fPIC -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Werror \
   $(pkg-config --libs babeltrace2) --shared \
   -Wl,--whole-archive  "${source_archive}" -Wl,--no-whole-archive \
