Add target for test_wrapper_thapi_text_pretty.sh so that it gets rebuilt if modified.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -47,6 +47,9 @@ bin_PROGRAMS = thapi_metadata
 bin_SCRIPTS = \
 	babeltrace_thapi
 
+noinst_SCRIPTS = \
+	test_wrapper_thapi_text_pretty.sh
+
 .PHONY: version
 
 version:
