--- a/utils/test_wrapper_thapi_text_pretty.sh.in
+++ b/utils/test_wrapper_thapi_text_pretty.sh.in
@@ -1,51 +1,46 @@
 #!/usr/bin/env bash
 #
-# Usage: test_wrapper_thapi_text_pretty.sh cuda|hip|ze /path/to/trac.bt_text_pretty
-# 
+# Usage: test_wrapper_thapi_text_pretty.sh backend archive /path/to/log.thapi_text_pretty
+#
 set -euxo pipefail
 
-: "${CC:=gcc}"
-
 be="$1"
-trace_path="$2"
+source_path="$2"
+source_archive="$3"
+input_thapi_text_pretty="$4"
 
-btx_model_path="@top_builddir@/${be}/btx_${be}_model.yaml"
-trace_name="$(basename ${trace_path%.thapi_text_pretty})"
-expected_output_path="$(dirname $trace_path)/${trace_name}.bt_text_pretty"
-out_dir="@top_builddir@/${be}/tests/$trace_name"
-metababel_out_dir="${out_dir}/btx_source"
+# Generated tmp folder
+folder_name="tests/"$(basename "${input_thapi_text_pretty}" .thapi_text_pretty)
+mkdir -p "$folder_name"
 
-mkdir -p "${out_dir}"
+# Generate source callback and link plugin
+source_callback_c="${folder_name}/callback.c"
 
-source_c_fname="${trace_name}.c"
-source_c_path="${out_dir}/${source_c_fname}"
+@top_srcdir@/utils/thapi_log_to_bt_source_component.rb -y "@top_builddir@/${be}/btx_${be}_model.yaml" \
+  -i "${input_thapi_text_pretty}" -o "${source_callback_c}"
 
-set -x
+${CC:-gcc} -o "${folder_name}/libTestSource.so" \
+  -I @top_srcdir@/utils/include -I @top_srcdir@/"${be}" -I @top_srcdir@/"${be}"/include \
+  -I . -I "${source_path}" \
+  $(pkg-config --cflags babeltrace2) -fPIC -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Werror \
+  $(pkg-config --libs babeltrace2) --shared \
+  -Wl,--whole-archive  "${source_archive}" -Wl,--no-whole-archive \
+  "${source_callback_c}"
 
-@top_srcdir@/utils/thapi_log_to_bt_source_component.rb -y "$btx_model_path" \
-  -i "$trace_path" -o "$source_c_path"
-
-metababel -d "$btx_model_path" -t SOURCE -o "${metababel_out_dir}" \
-  -p generated -i ${be}.h.include
-
-${CC} -g -Werror -o ${out_dir}/btx_source.so \
-  -I ${metababel_out_dir} -I @top_srcdir@/utils/include \
-  -I @top_srcdir@/${be} -I @top_srcdir@/${be}/include -I @top_builddir@/${be} \
-  $(pkg-config --cflags babeltrace2) \
-  $(pkg-config --libs babeltrace2) \
-  -fPIC --shared \
-  "${source_c_path}" \
-  "${metababel_out_dir}"/*.c \
-  "${metababel_out_dir}"/metababel/*.c
-
+# Run Plugin and Verify output
 bt2_cmd="babeltrace2"
 if [[ -v THAPI_VALGRIND ]]; then
   bt2_cmd="valgrind --suppressions=@top_srcdir@/.valgrind/dlopen.supp --error-exitcode=1 --leak-check=full --quiet -- $bt2_cmd"
 fi
-babeltrace_pretty_out="${out_dir}"/thapi-events-babeltrace.txt
-$bt2_cmd --plugin-path="${out_dir}:@top_builddir@/${be}/.libs/" \
-  --component=source.generated.btx \
-  --component=filter.${be}interval.interval \
-  > "${babeltrace_pretty_out}"
 
-diff "$expected_output_path" "$babeltrace_pretty_out"
+current_output_bt_text_pretty="${folder_name}/current.bt_text_pretty"
+
+$bt2_cmd --plugin-path="${folder_name}:@top_builddir@/${be}/.libs/" \
+  --component=source."${be}"test.test \
+  --component=filter."${be}"interval.interval \
+  > "${current_output_bt_text_pretty}"
+
+diff "${input_thapi_text_pretty/.thapi_text_pretty/.bt_text_pretty}" "$current_output_bt_text_pretty"
+
+# Remove tmp file
+rm -rf "$folder_name"
