--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -309,7 +309,7 @@ def env_tracers
   if OPTIONS[:'backend-names'].include?('omp')
     backends << 'omp'
     h['LTTNG_UST_OMP_INTEL'] = 1
-    h['OMP_TOOL_LIBRARIES'] = File.join(PKGLIBDIR, 'libTracerOMPT.so')
+    h['OMP_TOOL_LIBRARIES'] = File.join(LIBDIR, 'libTracerOMPT.so')
   end
 
   # Sample
