--- a/omp/Makefile.am
+++ b/omp/Makefile.am
@@ -74,15 +74,16 @@ btx_omp_model.yaml: $(top_srcdir)/utils/babeltrace_to_metababel_model.rb omp_bab
 	SRC_DIR=$(srcdir) $(RUBY) $^ > $@
 
 $(BTX_OMP_GENERATED) &: $(top_srcdir)/xprof/btx_interval_model.yaml btx_ompmatching_model.yaml btx_omp_model.yaml
-	$(METABABEL) -u btx_omp_model.yaml -d $(top_srcdir)/xprof/btx_interval_model.yaml -t FILTER -o btx_filter_omp -p clinterval -c interval --matching $(srcdir)/btx_ompmatching_model.yaml -i ompt.h.include
+	$(METABABEL) -u btx_omp_model.yaml -d $(top_srcdir)/xprof/btx_interval_model.yaml -t FILTER -o btx_filter_omp -p ompinterval -c interval --matching $(srcdir)/btx_ompmatching_model.yaml -i ompt.h.include
 
 CLEANFILES += \
-  omp_babeltrace_model.yaml \
+	omp_babeltrace_model.yaml \
 	btx_omp_model.yaml
 
 EXTRA_DIST += \
 	ompt_model.rb \
-	gen_babeltrace_omp_model.rb
+	gen_babeltrace_omp_model.rb \
+	btx_ompmatching_model.yaml
 
 OMP_PROBES = ompt_tracepoints
 OMP_PROBES_TP = $(OMP_PROBES:=.tp)
@@ -251,4 +252,4 @@ EXTRA_DIST += \
 
 CLEANFILES += \
 	$(TRACE_COMMON) \
-	$(BTX_CUDA_GENERATED_SOURCE_TEST)
+	$(BTX_OMP_GENERATED_SOURCE_TEST)
