--- a/utils/test_wrapper_thapi_text_pretty.sh.in
+++ b/utils/test_wrapper_thapi_text_pretty.sh.in
@@ -19,7 +19,13 @@ source_callback_c="${folder_name}/callback.c"
 @top_srcdir@/utils/thapi_log_to_bt_source_component.rb -y "@top_builddir@/${be}/btx_${be}_model.yaml" \
   -i "${input_thapi_text_pretty}" -o "${source_callback_c}"
 
+modified_include_arg=""
+if [ "$be" = "omp" ]; then
+  modified_include_arg="-I @top_builddir@/${be}/modified_include"
+fi
+
 ${CC:-gcc} -o "${folder_name}/libTestSource.so" \
+  $modified_include_arg \
   -I @top_srcdir@/utils/include -I @top_srcdir@/"${be}" -I @top_srcdir@/"${be}"/include \
   -I . -I "${source_path}" \
   $(pkg-config --cflags babeltrace2) -fPIC -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Werror \
