--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -75,7 +75,6 @@ module BTComponentClassRefinement
   refine(BT2::BTGraph) do
     attr_accessor :plugins_path, :cli_v
 
-    # https://babeltrace.org/docs/v2.0/man1/babeltrace2-run.1/#doc-connect-comps
     def bt2_escape(str, escapes = '*?[.:')
       str.chars.map do |c|
         escapes.include?(c) ? '\\' + c : c
@@ -88,17 +87,19 @@ module BTComponentClassRefinement
 
       @plugins_path << component_class.plugin.path
       @cli_v << "--component #{name}:#{component_class.type.to_s.split('_').last.downcase}.#{component_class.plugin.name}.#{component_class.name}"
-      str_params = params.filter_map do |k, v|
-        next if !v.instance_of?(String) || v.empty?
 
-        v = "\"#{v}\"" if v.include?(',')
+      # https://babeltrace.org/docs/v2.0/man1/babeltrace2-run.1/#doc-opt--params
+      str_params = params.filter_map do |k, v|
+        v = v.to_s
+        v = %("#{v}") if v.include?(',')
         "#{k}=#{v}"
       end.join(',')
-      @cli_v << "--params #{str_params.dump}" unless str_params.empty?
+      @cli_v << "--params '#{str_params}'" unless str_params.empty?
       super
     end
 
     def connect_ports(upstream_port, downstream_port)
+      # https://babeltrace.org/docs/v2.0/man1/babeltrace2-run.1/#doc-connect-comps
       # UP-COMP-PAT[.UP-PORT-PAT]:DOWN-COMP-PAT[.DOWN-PORT-PAT]
       up_comp = bt2_escape(upstream_port.component.name)
       up_port = bt2_escape(upstream_port.name)
