--- a/utils/test_wrapper_thapi_text_pretty.sh.in
+++ b/utils/test_wrapper_thapi_text_pretty.sh.in
@@ -41,7 +41,7 @@ fi
 
 current_output_bt_text_pretty="${folder_name}/current.bt_text_pretty"
 
-ln @top_builddir@/${be}/.libs/lib${be^^}Interval.so ${folder_name}/
+ln -f @top_builddir@/${be}/.libs/lib${be^^}Interval.so ${folder_name}/
 $bt2_cmd --plugin-path="${folder_name}" \
   --component=source."${be}"test.test \
   --component=filter."${be}"interval.interval \
